--- a/Pipfile
+++ b/Pipfile
@@ -31,4 +31,4 @@ factory-boy = "==3.2.1"
 google-cloud-secret-manager = "==2.8.0"
 google-auth = "==1.34.0"
 google-cloud-storage = "==1.44.0"
-
+pytest-django = "*"
